# qnap-mediaserver-config

./: .gitignore  .pre-commit-config.yaml  README.md  docker-compose.yml  pyproject.toml  ruff.toml
homeassistant/config/: automations.yaml  tesla_fleet.key
homeassistant/config/image/22856c87c61387822988b5044cb07901/: 512x512  original
speedtest-tracker/config/database/: database.sqlite
