[tool.poetry]
name = "qnap-config"
version = "0.1.0"
description = "pyproject for holding python"
authors = ["Nicholas Long <nllong>"]
license = "BSD"
packages = [
    { include = "lib" }
]

[tool.poetry.dependencies]
python = "^3.12"

[tool.poetry.group.dev.dependencies]
pytest = "^9.0.2"
pytest-mock = "^3.15.1"
pre-commit = "^4.3.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra -q"
testpaths = ["tests"]
